--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "walletshell",
-  "productName": "WalletShell",
-  "description": "TurtleCoin GUI Wallet",
-  "version": "v0.3.4",
-  "homepage": "https://github.com/turtlecoin/turtle-wallet-electron",
-  "repository": "https://github.com/turtlecoin/turtle-wallet-electron",
+  "name": "jortswallet",
+  "productName": "JortsWallet",
+  "description": "JortsWallet GUI Wallet",
+  "version": "v0.0.1",
+  "homepage": "https://github.com/Frinkel/jortswallet",
+  "repository": "https://github.com/Frinkel/jortswallet",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "debug": "electron . debug",
     "dev": "electron . dev",
-    "dist-win": "./node_modules/.bin/electron-builder --x64 --win -c.extraResources=./bin/win/turtle-service.exe",
-    "dist-lin": "./node_modules/.bin/electron-builder --x64 --linux -c.extraResources=./bin/lin/turtle-service",
-    "dist-mac": "./node_modules/.bin/electron-builder --x64 --mac -c.extraResources=./bin/osx/turtle-service"
+    "dist-win": "./node_modules/.bin/electron-builder --x64 --win -c.extraResources=./bin/win/lynne-service.exe",
+    "dist-lin": "./node_modules/.bin/electron-builder --x64 --linux -c.extraResources=./bin/lin/lynne-service",
+    "dist-mac": "./node_modules/.bin/electron-builder --x64 --mac -c.extraResources=./bin/osx/lynne-service"
   },
   "keywords": [],
-  "author": "Rixombea, Macroshock, TurtleCoin Developers",
+  "author": "Frinkel, Rixombea, Macroshock, TurtleCoin Developers",
   "license": "ISC",
   "devDependencies": {
     "devtron": "^1.4.0",
@@ -33,9 +33,9 @@
     "request-promise-native": "^1.0.5"
   },
   "build": {
-    "appId": "lol.turtlecoin.walletshell",
-    "productName": "WalletShell",
-    "copyright": "Copyright (c) 2018 Rixombea, Macroshock, TurtleCoin Developers",
+    "appId": "frinkel.lynnesbicoin.jortswallet",
+    "productName": "JortsWallet",
+    "copyright": "Copyright (c) 2018 Frinkel, Rixombea, Macroshock, TurtleCoin Developers",
     "directories": {
       "app": ".",
       "output": "dist",
@@ -47,14 +47,14 @@
         "AppImage",
         "tar.bz2"
       ],
-      "maintainer": "rixombea (@labaylabay)",
+      "maintainer": "Frinkel (@Frinkel)",
       "category": "Office",
-      "vendor": "TurtleCoin",
-      "synopsis": "TurtleCoin GUI Wallet"
+      "vendor": "Lynnesbicoin",
+      "synopsis": "JortsWallet GUI Wallet"
     },
     "win": {
       "target": "nsis",
-      "publisherName": "TurtleCoin"
+      "publisherName": "Lynnesbicoin"
     },
     "nsis": {
       "artifactName": "${productName}-v${version}-${os}-${arch}-setup.${ext}",
